kubernetes/apps/default/garage/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.f9.casa`) || HostRegexp(`^.+\.s3\.f9\.casa$`)
      kind: Rule
      services:
        - name: garage
          port: 3900
    - match: Host(`garage.f9.casa`)
      kind: Rule
      services:
        - name: garage
          port: 3909
      middlewares:
        - name: default-headers
          namespace: traefik
